--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" id="html" class="not-dark">
+<html lang="en" id="html">
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
@@ -24,6 +24,23 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+
+    <script>
+      // initialize theme
+      const element = document.getElementById("html");
+      const prefersDarkMode = window.matchMedia("(prefers-color-scheme:dark)").matches;
+      const theme = window.localStorage.getItem("theme");
+
+      if (theme !== "dark" && theme !== "light"){
+        if (prefersDarkMode) {
+          element.classList.add("dark");
+          window.localStorage.setItem("theme", "dark");
+        } else {
+          window.localStorage.setItem("theme", "light");
+        }
+      } else if (theme === "dark") element.classList.add("dark");
+    </script>
+
     <title>React App</title>
   </head>
   <body class="bg-zinc-900">
