--- a/public/index.html
+++ b/public/index.html
@@ -2,13 +2,11 @@
 <html lang="en" id="html">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" href="%PUBLIC_URL%/favicon2.png" />
+    <!-- <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>🌳</text></svg>"> -->
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
+    <meta name="description" content="Web site created using create-react-app" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
@@ -27,21 +25,21 @@
 
     <script>
       // initialize theme
-      const element = document.getElementById("html");
-      const prefersDarkMode = window.matchMedia("(prefers-color-scheme:dark)").matches;
-      const theme = window.localStorage.getItem("theme");
+      const element = document.getElementById("html")
+      const prefersDarkMode = window.matchMedia("(prefers-color-scheme:dark)").matches
+      const theme = window.localStorage.getItem("theme")
 
-      if (theme !== "dark" && theme !== "light"){
+      if (theme !== "dark" && theme !== "light") {
         if (prefersDarkMode) {
-          element.classList.add("dark");
-          window.localStorage.setItem("theme", "dark");
+          element.classList.add("dark")
+          window.localStorage.setItem("theme", "dark")
         } else {
-          window.localStorage.setItem("theme", "light");
+          window.localStorage.setItem("theme", "light")
         }
-      } else if (theme === "dark") element.classList.add("dark");
+      } else if (theme === "dark") element.classList.add("dark")
     </script>
 
-    <title>React App</title>
+    <title>Bonsai Notes</title>
   </head>
   <body class="bg-zinc-900">
     <noscript>You need to enable JavaScript to run this app.</noscript>
