--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,9 @@
     <!-- <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>🌳</text></svg>"> -->
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#242424" />
-    <meta name="description" content="A lightweight note-taking application for the web." />
+    <meta
+      name="description"
+      content="An elegant and intuitive note-taking application for the web." />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/favicon2.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
@@ -25,18 +27,18 @@
 
     <script>
       // initialize theme
-      const element = document.getElementById("html")
-      const prefersDarkMode = window.matchMedia("(prefers-color-scheme:dark)").matches
-      const theme = window.localStorage.getItem("theme")
+      const element = document.getElementById("html");
+      const prefersDarkMode = window.matchMedia("(prefers-color-scheme:dark)").matches;
+      const theme = window.localStorage.getItem("theme");
 
       if (theme !== "dark" && theme !== "light") {
         if (prefersDarkMode) {
-          element.classList.add("dark")
-          window.localStorage.setItem("theme", "dark")
+          element.classList.add("dark");
+          window.localStorage.setItem("theme", "dark");
         } else {
-          window.localStorage.setItem("theme", "light")
+          window.localStorage.setItem("theme", "light");
         }
-      } else if (theme === "dark") element.classList.add("dark")
+      } else if (theme === "dark") element.classList.add("dark");
     </script>
 
     <title>Bonsai Notes</title>
